# pentardp-rs

./: Cargo.toml  Claude.md  pdu_plan.md
src/: lib.rs
src/codec/: ber.rs  mod.rs
src/pdu/: mod.rs  tpkt.rs
src/pdu/mcs/: channel.rs  connect.rs  domain.rs  mod.rs
src/pdu/rdp/: control.rs  header.rs  mod.rs
src/pdu/rdp/capability/: bitmap.rs  general.rs  input.rs  mod.rs  order.rs  sets.rs
src/pdu/rdp/connection/: client_info.rs  mod.rs
src/pdu/rdp/graphics/: bitmap.rs  mod.rs  orders.rs
src/pdu/rdp/input/: keyboard.rs  mod.rs  mouse.rs
src/pdu/x224/: connection.rs  data.rs  mod.rs
tests/: phase2_integration.rs
